--- a/sphinx/_templates/layout.html
+++ b/sphinx/_templates/layout.html
@@ -42,3 +42,19 @@
 {% set prev = "" %}
 {% set next = "" %}
 
+{% block footer %}
+    {{ super() }}
+<!-- Piwik -->
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://sourceforge.net/apps/piwik/pyclewn/" : "http://sourceforge.net/apps/piwik/pyclewn/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+piwik_action_name = '';
+piwik_idsite = 1;
+piwik_url = pkBaseURL + "piwik.php";
+piwik_log(piwik_action_name, piwik_idsite, piwik_url);
+</script>
+<object><noscript><p><img src="http://sourceforge.net/apps/piwik/pyclewn/piwik.php?idsite=1" alt="piwik"/></p></noscript></object>
+<!-- End Piwik Tag -->
+{% endblock %}
+
