--- a/sphinx/_templates/layout.html
+++ b/sphinx/_templates/layout.html
@@ -3,19 +3,17 @@
 {% block header %}
 <div style="background-color: white; padding: 0px 10px 0px 15px">
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
-<COLGROUP span="1" width="1*">
-<COLGROUP span="3" width="0*">
 <tr>
-  <td  align="left">
+  <td  width="70%" align="left">
     <img src="{{ pathto("_static/pyclewn.png", 1) }}" align="left" alt="Pyclewn"/>
   </td>
-  <td>
+  <td  width="10%>
     <a href="http://www.vim.org"><img src="{{ pathto("_static/vim.png", 1) }}" alt="Vim logo"/></a>
   </td>
-  <td>
+  <td  width="10%>
     <a href="http://www.gnu.org/software/gdb/gdb.html"><img src="{{ pathto("_static/gdb.png", 1) }}" alt="gdb logo"/></a>
   </td>
-  <td>
+  <td  width="10%>
     <a href="http://www.python.org"><img src="{{ pathto("_static/python-powered-h-50x65.png", 1) }}" alt="python logo"/></a>
   </td>
 </tr>
