--- a/sphinx/_templates/indexsidebar.html
+++ b/sphinx/_templates/indexsidebar.html
@@ -15,7 +15,7 @@
 
 <h3>Support</h3>
 <ul>
-    <li><a href="svn.html">subversion</a></li>
+    <li><a href="mercurial.html">mercurial</a></li>
     <li><a href="https://lists.sourceforge.net/lists/listinfo/pyclewn-general">mailing list</a></li>
     <li><a href="http://sourceforge.net/tracker/?group_id=212808&atid=1023202">bug tracker</a></li>
 </ul>
