update web site

--- a/sphinx/_templates/indexsidebar.html
+++ b/sphinx/_templates/indexsidebar.html
@@ -21,6 +21,14 @@
     <li><a href="http://sourceforge.net/tracker/?group_id=212808&atid=1023202">bug tracker</a></li>
 </ul>
 
+<h3>Please help</h3>
+<table width="100%">
+    <tr><td align="center">
+        <a href="http://lokoti.alwaysdata.net/dokuwiki/en:accueil"><img src="_static/lokoti.gif" alt="Les Chemins de Lokoti"/></a>
+    </tr>
+    <tr><td align="center">Les Chemins de Lokoti</tr>
+</table>
+
 <h3>Links</h3>
 <ul>
     <li><a href="http://clewn.sourceforge.net">clewn</a></li>
