update web site

--- a/sphinx/_templates/indexsidebar.html
+++ b/sphinx/_templates/indexsidebar.html
@@ -30,6 +30,7 @@
 
 <h3>Links</h3>
 <ul>
+    <li><a href="http://code.google.com/p/pdb-clone/">pdb-clone</a></li>
     <li><a href="http://clewn.sourceforge.net">clewn</a></li>
 </ul>
 
