--- a/sphinx/_templates/indexsidebar.html
+++ b/sphinx/_templates/indexsidebar.html
@@ -1,8 +1,4 @@
-<h3>Download</h3>
-<p>Get the
-<a href="http://sourceforge.net/project/showfiles.php?group_id=212808">latest version</a>
-<b>{{ version }}</b>
-</p>
+<h2>Version {{ version }}</h2>
 
 <h3>Documentation</h3>
 <ul>
@@ -15,10 +11,8 @@
 
 <h3>Support</h3>
 <ul>
-    <li><a href="mercurial.html">mercurial</a></li>
-    <li><a href="vim-patches.html">vim patches</a></li>
     <li><a href="https://lists.sourceforge.net/lists/listinfo/pyclewn-general">mailing list</a></li>
-    <li><a href="http://sourceforge.net/tracker/?group_id=212808&atid=1023202">bug tracker</a></li>
+    <li><a href="http://bitbucket.org/xdegaye/pyclewn/issues">issue tracker</a></li>
 </ul>
 
 <h3>Please help</h3>
@@ -30,8 +24,10 @@
 
 <h3>Links</h3>
 <ul>
+    <li><a href="http://bitbucket.org/xdegaye/pyclewn">mercurial repository</a></li>
+    <li><a href="http://pypi.python.org/pypi/pyclewn">pyclewn at PyPi</a></li>
+    <li><a href="http://bitbucket.org/xdegaye/pyclewn">pyclewn at BitBucket</a></li>
     <li><a href="http://code.google.com/p/pdb-clone/">pdb-clone</a></li>
-    <li><a href="http://clewn.sourceforge.net">clewn</a></li>
 </ul>
 
 <a href="http://sourceforge.net/projects/pyclewn">
