pdb-clone has moved to BitBucket.

--- a/sphinx/_templates/indexsidebar.html
+++ b/sphinx/_templates/indexsidebar.html
@@ -27,7 +27,7 @@
     <li><a href="http://bitbucket.org/xdegaye/pyclewn">mercurial repository</a></li>
     <li><a href="http://pypi.python.org/pypi/pyclewn">pyclewn at PyPi</a></li>
     <li><a href="http://bitbucket.org/xdegaye/pyclewn">pyclewn at BitBucket</a></li>
-    <li><a href="http://code.google.com/p/pdb-clone/">pdb-clone</a></li>
+    <li><a href="https://bitbucket.org/xdegaye/pdb-clone/wiki/Home">pdb-clone</a></li>
 </ul>
 
 <a href="http://sourceforge.net/projects/pyclewn">
